--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
